--- a/marketing/src/sections/navigation/KongNav/KongNav.css
+++ b/marketing/src/sections/navigation/KongNav/KongNav.css
@@ -1,4 +1,4 @@
-nav.kongnav {
+.kong-hero-container nav.kongnav {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
@@ -8,7 +8,7 @@ nav.kongnav {
 
 }
 
-.kongnav-container {
+.kong-hero-container .kongnav-container {
     background-color: #ffffff;
     position: fixed;
     left: 0;
@@ -16,12 +16,12 @@ nav.kongnav {
     top: 0;
 }
 
-.kongnav>div:first-child {
+.kong-hero-container .kongnav-container .kongnav>div:first-child {
     display: flex;
     align-items: center;
 }
 
-.kongnav .kongnav-menu {
+.kong-hero-container .kongnav-container .kongnav .kongnav-menu {
     margin-right: 80px;
     list-style: none;
     display: flex;
@@ -31,53 +31,53 @@ nav.kongnav {
     cursor: pointer;
 }
 
-.kongnav .product-menu {
+.kong-hero-container .kongnav-container .kongnav .product-menu {
     font-weight: bold;
 }
 
-.kongnav .product-menu:hover {
+.kong-hero-container .kongnav-container .kongnav .product-menu:hover {
     color: #537085;
 }
 
-.kongnav .kongnav-menu img {
+.kong-hero-container .kongnav-container .kongnav .kongnav-menu img {
     height: 20px;
     margin-top: 5px;
 }
 
-.kongnav .kong-logo img {
+.kong-hero-container .kongnav-container .kongnav .kong-logo img {
     margin-left: 20px;
     width: auto;
 }
 
 
-.kongnav .kongnav-menu>li:first-child a {
+.kong-hero-container .kongnav-container .kongnav .kongnav-menu>li:first-child a {
     display: flex;
     align-items: center;
 }
 
-.kongnav .kongnav-link {
+.kong-hero-container .kongnav-container .kongnav .kongnav-link {
     display: flex;
     align-items: center;
     gap: 20px;
     margin-left: 20px;
 }
 
-.kongnav .kongnav-link a {
+.kong-hero-container .kongnav-container .kongnav .kongnav-link a {
     font-size: 1.1rem;
     text-decoration: none;
 }
 
-.kongnav .kongnav-link button {
+.kong-hero-container .kongnav-container .kongnav .kongnav-link button {
     font-size: 0.8rem;
     padding: 15px 25px;
     border-radius: 8px;
 }
 
-.kongnav .open {
+.kong-hero-container .kongnav-container .kongnav .open {
     rotate: 180deg;
 }
 
-.kongnav .demoBtn {
+.kong-hero-container .kongnav-container .kongnav .demoBtn {
     background-color: #1155cb;
     color: #ffffff;
     border: 1px solid #1155cb;
@@ -85,16 +85,16 @@ nav.kongnav {
     transform: translateX(0);
 }
 
-.kongnav .demoBtn:hover {
+.kong-hero-container .kongnav-container .kongnav .demoBtn:hover {
     background-image: linear-gradient(to left, #31056d, #1414ee);
     transform: translateX(1);
 }
 
-.kongnav button {
+.kong-hero-container .kongnav-container .kongnav button {
     cursor: pointer;
 }
 
-.kongnav .startBtn {
+.kong-hero-container .kongnav-container .kongnav .startBtn {
     background-color: #ffffff;
     color: #5284d8;
     border: 1px solid #1155cb;
@@ -102,27 +102,25 @@ nav.kongnav {
     transform: translateX(0);
 }
 
-.kongnav .kongnav-link a {
+.kong-hero-container .kongnav-container .kongnav .kongnav-link a {
     font-weight: bold;
 }
 
-.kongnav .kongnav-link a:hover {
+.kong-hero-container .kongnav-container .kongnav .kongnav-link a:hover {
     color: #537085;
 }
 
-.kongnav .startBtn:hover {
+.kong-hero-container .kongnav-container .kongnav .startBtn:hover {
     background-image: linear-gradient(to left, #31056d, #1414ee);
-    /* background-color: #1155cb; */
     color: white;
     transform: translateX(1);
-
 }
 
-.kongnav .kongnav-menu-2 {
+.kong-hero-container .kongnav-container .kongnav .kongnav-menu-2 {
     font-weight: bold;
 }
 
-.kongnav .kongnav-menu-2:hover {
+.kong-hero-container .kongnav-container .kongnav .kongnav-menu-2:hover {
     color: #537085;
 }
 
@@ -137,22 +135,22 @@ nav.kongnav {
     background-color: white;
 }
 
-.responsive-kong-nav {
+.kong-hero-container .responsive-kong-nav {
     display: none;
 }
 
-.kong-sub-link-list {
+.kong-hero-container .responsive-ul-links .kong-sub-link-list {
     display: none;
 }
 
-.sub-nav-content {
+.kong-hero-container .responsive-ul-links .sub-nav-content {
     display: none;
 }
 
-.sub-nav-prod-header {
+.kong-hero-container .kong-menu-container .sub-nav-prod-header {
     display: none;
 }
 
-.sub-nav-content {
+.kong-hero-container .responsive-ul-links .sub-nav-content {
     display: none;
 }
