--- a/marketing/src/sections/navigation/MiroNav/MiroNavResponsive.css
+++ b/marketing/src/sections/navigation/MiroNav/MiroNavResponsive.css
@@ -13,6 +13,10 @@
         border-bottom: 1px solid #ffffff;
         transform-origin: top;
         transition: .4s all;
+        position: fixed;
+        left: 0;
+        right: 0;
+
     }
 
     .miro-hero-container .miro-nav-close {
@@ -96,6 +100,7 @@
     }
 
     .miro-hero-container .nav-links-open {
+        margin-top: 70px;
         transform: translateY(0);
         transform-origin: top;
         background-color: #eee;
