--- a/marketing/src/sections/navigation/KongNav/KongNavMenu/KongNavMenu.css
+++ b/marketing/src/sections/navigation/KongNav/KongNavMenu/KongNavMenu.css
@@ -3,9 +3,10 @@
     position: absolute;
     right: 0px;
     display: flex;
+    align-items: center;
     justify-content: center;
     margin-top: 20px;
-    gap: 115px;
+    gap: 40px;
     background-color: #ffffff;
     top: 53px
 }
@@ -13,7 +14,6 @@
 
 .kong-menu-container .products-menu-option li {
     list-style: none;
-
 }
 
 
