--- a/marketing/src/sections/navigation/KongNav/KongNavResponsive.css
+++ b/marketing/src/sections/navigation/KongNav/KongNavResponsive.css
@@ -91,8 +91,8 @@
 
     .kong-hero-container .kong-menu-container .products-menu-option {
         flex-direction: column;
+        align-items: flex-start;
         position: absolute;
-        width: 115%;
         gap: 15px;
         margin: 0;
         top: 0px;
@@ -103,6 +103,7 @@
         display: flex;
         flex-direction: column;
         gap: 24px;
+        width: 400px;
     }
 
     .kong-hero-container .kong-menu-container div.menu-description ul {
