Changed the border color and set the background-color as white as well updated the image

--- a/marketing/src/sections/navigation/MiroNav/MiroNav.css
+++ b/marketing/src/sections/navigation/MiroNav/MiroNav.css
@@ -18,7 +18,7 @@
 .miro-hero-container .hero-nav {
     background-color: #ffffff;
     position: relative;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid #f0f0f0;
 }
 
 .miro-hero-container .miro-nav-container a {
