--- a/marketing/src/sections/navigation/KongNav/KongNav.css
+++ b/marketing/src/sections/navigation/KongNav/KongNav.css
@@ -14,6 +14,7 @@
     left: 0;
     right: 0;
     top: 0;
+    box-shadow: 0 1px 0 #dae3f2;
 }
 
 .kong-hero-container .kongnav-container .kongnav>div:first-child {
