--- a/marketing/src/sections/navigation/KongNav/KongNav.css
+++ b/marketing/src/sections/navigation/KongNav/KongNav.css
@@ -23,31 +23,46 @@
 }
 
 .kong-hero-container .kongnav-container .kongnav .kongnav-menu-item {
-    margin-right: 80px;
     list-style: none;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
     font-size: 1.2rem;
     cursor: pointer;
 }
 
+.kong-hero-container .kongnav-container .kongnav .product-option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80px;
+}
+
 .kong-hero-container .kongnav-container .kongnav .product-menu {
-    font-weight: bold;
+    color: #587488;
+    font-weight: normal;
+    transform: scale(1);
+    transition: .4s all;
+}
+
+.kong-hero-container .kongnav-container .kongnav .prod-open {
+    font-weight: 600;
+    color: #062f4d;
 }
 
 .kong-hero-container .kongnav-container .kongnav .product-menu:hover {
-    color: #537085;
+    font-weight: 600;
+    color: #062f4d;
 }
 
 .kong-hero-container .kongnav-container .kongnav .kongnav-menu-item img {
-    height: 20px;
-    margin-top: 5px;
+    height: 15px;
 }
 
 .kong-hero-container .kongnav-container .kongnav .kong-logo img {
     margin-left: 20px;
     width: auto;
+
 }
 
 
@@ -105,10 +120,12 @@
 
 .kong-hero-container .kongnav-container .kongnav .kongnav-link a {
     font-weight: bold;
+    color: #587488;
 }
 
 .kong-hero-container .kongnav-container .kongnav .kongnav-link a:hover {
-    color: #537085;
+    color: #062f4d;
+
 }
 
 .kong-hero-container .kongnav-container .kongnav .startBtn:hover {
@@ -118,11 +135,15 @@
 }
 
 .kong-hero-container .kongnav-container .kongnav .kongnav-menu-item-2 {
-    font-weight: bold;
+    color: #062f4d;
+    font-weight: 400;
+    width: 80px;
 }
 
 .kong-hero-container .kongnav-container .kongnav .kongnav-menu-item-2:hover {
-    color: #537085;
+    color: #062f4d;
+
+    font-weight: 600;
 }
 
 .kong-dullBackground {
