Changes are made as per request

--- a/marketing/src/sections/navigation/MiroNav/MiroNavMenu/MiroNavMenu.css
+++ b/marketing/src/sections/navigation/MiroNav/MiroNavMenu/MiroNavMenu.css
@@ -13,6 +13,7 @@
 
 .miroNav-open {
     transform: scaleY(1);
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 60px 100px;
 }
 
 .miro-nav-menu .product-description-list {
