--- a/marketing/src/sections/navigation/KongNav/KongNavResponsive.css
+++ b/marketing/src/sections/navigation/KongNav/KongNavResponsive.css
@@ -2,6 +2,7 @@
     .kong-hero-container .kong-menu-container ul {
         margin: 0;
         padding: 0;
+        font-family: sans-serif;
     }
 
 
@@ -51,16 +52,26 @@
 
     }
 
-
     .kong-hero-container ul.responsive-ul-links {
         width: 400px;
         margin: 10px;
         padding: 20px 0px;
         list-style: none;
-        font-size: 1.5rem;
+        font-size: 1.2rem;
         background-color: #fff;
         position: absolute;
+        left: -3px;
+        right: 0px;
         z-index: -10;
+        color: #062f4d;
+        font-family: sans-serif;
+
+    }
+
+    .kong-hero-container ul.responsive-ul-links hr {
+        height: 2px;
+        border: none;
+        background-color: #7d91b380;
     }
 
     .kong-hero-container .respo-ul-open {
@@ -97,7 +108,7 @@
         position: absolute;
         gap: 15px;
         margin: 0;
-        top: -70px;
+        top: -60px;
         left: -7px;
     }
 
@@ -125,7 +136,11 @@
         background-color: #fff;
         border-bottom: 2px solid #dce4f3;
         width: 100%;
-        padding: 15px 0px;
+        align-items: center;
+    }
+
+    .kong-hero-container .kong-menu-container .sub-nav-prod-header div {
+        color: #062f4d;
     }
 
     .kong-hero-container .kong-menu-container .sub-nav-prod-header img {
@@ -158,7 +173,7 @@
     }
 
     .kong-hero-container .kong-menu-container .product-menu-option-3 {
-        margin-top: -10px;
+        margin-top: -20px;
     }
 
     .kong-hero-container .kong-menu-container .product-menu-option-3>div:first-child {
@@ -167,6 +182,7 @@
 
     .kong-hero-container .kong-menu-container .product-menu-option-2>div:first-child {
         margin-bottom: 40px;
+        margin-top: 10px;
     }
 
     .kong-hero-container .responsive-ul-links .kong-sub-action-btn {
@@ -178,20 +194,21 @@
     }
 
     .kong-hero-container .responsive-ul-links .kong-sub-action-btn button {
-        width: 350px;
+        width: 100%;
         outline: none;
-        height: 40px;
+        height: 30px;
         border: none;
         margin: 10px 0px;
-        font-size: 1rem;
+        font-size: 0.9rem;
         justify-self: center;
-        border-radius: 5px;
+        border-radius: 4px;
     }
 
     .kong-hero-container .responsive-ul-links .kong-sub-action-btn>a {
         font-weight: 400;
         text-decoration: none;
-        font-size: 1.5rem;
+        font-size: 1.1rem;
+        color: #062f4d;
     }
 
     .kong-hero-container .responsive-ul-links .kong-sub-action-btn .sub-demo-btn {
@@ -200,7 +217,7 @@
     }
 
     .kong-hero-container .responsive-ul-links .kong-sub-action-btn .sub-start-btn {
-        border: 2px solid #1154ca;
+        border: 1px solid #1154ca;
         background-color: #ffffff;
         color: #1154ca;
     }
