--- a/marketing/src/sections/navigation/KongNav/KongNav.css
+++ b/marketing/src/sections/navigation/KongNav/KongNav.css
@@ -1,3 +1,7 @@
+.kong-hero-container {
+    background: linear-gradient(180deg, #f7f9fc 0, rgba(247, 249, 252, 0) 100%);
+}
+
 .kong-hero-container nav.kongnav {
     max-width: 1200px;
     margin: 0 auto;
@@ -5,7 +9,10 @@
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+    background-color: #fff;
+    height: 65px;
     font-family: sans-serif;
+    box-shadow: 0 1px 0 #dae3f2;
 }
 
 .kong-hero-container .kongnav-container {
@@ -14,6 +21,8 @@
     left: 0;
     right: 0;
     top: 0;
+    align-self: center;
+    height: 65px;
     box-shadow: 0 1px 0 #dae3f2;
 }
 
@@ -76,18 +85,19 @@
 .kong-hero-container .kongnav-container .kongnav .kongnav-link {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
     margin-left: 20px;
 }
 
 .kong-hero-container .kongnav-container .kongnav .kongnav-link a {
     font-size: 1rem;
     text-decoration: none;
+    margin-right: 15px;
 }
 
 .kong-hero-container .kongnav-container .kongnav .kongnav-link button {
     font-size: 1rem;
-    padding: 12px 10px;
+    padding: 13px 12px;
     border-radius: 5px;
 }
 
@@ -157,7 +167,7 @@
 
 .kong-brightBackground {
     margin: 0;
-    background-color: white;
+    background-color: #f8fafc;
 }
 
 .kong-hero-container .responsive-kong-nav {
